# Quadcopter-Simulation

./: CMakeLists.txt  README.md  main.cpp  plot.py
rigidBodyModule/: constants.h  nmpcController.cpp  nmpcController.h  rigidBody.cpp  rigidBody.h
